--- a/Lesson 1/Lesson 6/index.html
+++ b/Lesson 1/Lesson 6/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-        <script src="main6.js"></script>
+        <script src="homeWork6.js"></script>
     </body>
 </html>
