--- a/Lesson 1/Lesson 10/index.html
+++ b/Lesson 1/Lesson 10/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lesson 9</title>
+        <title>Lesson 10</title>
     </head>
     <body>
 
-        <script src="main9.js"></script>
+        <script src="homeWork10.js"></script>
     </body>
 </html>
