--- a/Lesson 1/Lesson 20/index.html
+++ b/Lesson 1/Lesson 20/index.html
@@ -17,10 +17,7 @@
 
   </form>
   <button class="users">Add users</button>
-
-
-
-  <script src='homeWork20.js'></script>
+  <button class="idUsers">IdUsers</button>
+  <script src='main.js'></script>
 </body>
-
 </html>
